# spleeterweb

./: .gitignore  README.md  pyproject.toml  run.py
spleeterweb/: app.py  config.py  spleeter.py  utils.py
spleeterweb/static/: index.css  index.html
spleeterweb/templates/: index.html
spleeterweb/views/: api.py
