[tool.poetry]
name = "spleeterweb"
version = "0.1.0"
description = ""
authors = ["Rusty Roberts <rust.roberts@protonmail.com>"]

[tool.poetry.dependencies]
python = "3.6.1"
spleeter = "^2.1.2"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
